# sample-app-ais-integration-grpc

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: bump-buf-packages.yml  ci.yml
src/: ais.py  integration.py  lattice.py  main.py
var/: config.yml
