[project]
name = "sample-app-ais-integration-grpc"
version = "0.1.0"
description = "AIS to Lattice Integration - gRPC sample application"
requires-python = ">=3.9"
dependencies = [
    "APScheduler==3.10.4",
    "grpcio==1.76.0",
    "PyYAML==6.0.2",
    "pandas==2.2.3",
    "requests",
    "anduril-lattice-sdk-grpc-python==1.76.0.2.20251210223909+6356d7d16a14",
    "anduril-lattice-sdk-protocolbuffers-python==33.0.0.1.20251210223909",
    "anduril-lattice-sdk-protocolbuffers-pyi==33.0.0.1.20251210223909"
]

[[tool.uv.index]]
name = "buf"
url = "https://buf.build/gen/python"
explicit = true

[tool.uv.sources]
anduril-lattice-sdk-grpc-python = { index = "buf" }
anduril-lattice-sdk-protocolbuffers-python = { index = "buf" }
anduril-lattice-sdk-protocolbuffers-pyi = { index = "buf" }


[project.optional-dependencies]
dev = []
