[project]
name = "sample-app-ais-integration-grpc"
version = "0.1.0"
description = "AIS to Lattice Integration - gRPC sample application"
requires-python = ">=3.10"
dependencies = [
    "APScheduler==3.10.4",
    "grpcio==1.80.0",
    "PyYAML==6.0.2",
    "pandas==2.3.3",
    "requests",
    "protobuf==7.34.1",
    "anduril-lattice-sdk-grpc-python==1.78.1.1.20260306171407",
    "anduril-lattice-sdk-protocolbuffers-python==34.1.0.1.20260306171407",
    "anduril-lattice-sdk-protocolbuffers-pyi==34.1.0.1.20260306171407",
]

[[tool.uv.index]]
name = "buf"
url = "https://buf.build/gen/python"
explicit = true

[tool.uv.sources]
anduril-lattice-sdk-grpc-python = { index = "buf" }
anduril-lattice-sdk-protocolbuffers-python = { index = "buf" }
anduril-lattice-sdk-protocolbuffers-pyi = { index = "buf" }


[project.optional-dependencies]
dev = []
