[project]
name = "sample-app-ais-integration-grpc"
version = "0.1.0"
description = "AIS to Lattice Integration - gRPC sample application"
requires-python = ">=3.10"
dependencies = [
    "APScheduler==3.11.2",
    "grpcio==1.81.1",
    "PyYAML==6.0.3",
    "pandas==2.3.3",
    "requests",
    "protobuf==7.35.1",
    "anduril-lattice-sdk-grpc-python==1.81.1.1.20260626181256",
    "anduril-lattice-sdk-protocolbuffers-python==35.1.0.1.20260626181256",
    "anduril-lattice-sdk-protocolbuffers-pyi==35.1.0.1.20260626181256",
]

[[tool.uv.index]]
name = "buf"
url = "https://buf.build/gen/python"
explicit = true

[tool.uv.sources]
anduril-lattice-sdk-grpc-python = { index = "buf" }
anduril-lattice-sdk-protocolbuffers-python = { index = "buf" }
anduril-lattice-sdk-protocolbuffers-pyi = { index = "buf" }


[project.optional-dependencies]
dev = []
